# avic900-vncviewer

./: client.cpp  client.h  client_factory.h  config_storage.cpp  config_storage.h  connection_watchdog.cpp  connection_watchdog.h  logger.c  logger.h  mutex.cpp  mutex_factory.h  thread.h  thread_factory.h  vncviewer.ini
client/: client.cpp  client.h  client_factory.h  config_storage.cpp  config_storage.h  mutex.h  mutex_factory.h  thread.cpp  thread.h  thread_factory.h  vncviewer.ini
client/jpeg/: jconfig.h
client/platform/linux/: CMakeLists.txt  client_gtk.cpp  client_gtk.h  compat.h  mutex_linux.cpp  mutex_linux.h  thread_linux.cpp  thread_linux.h  vncviewer.cpp
client/platform/wince/: .gitignore  client_ddraw.cpp  client_ddraw.h  client_ddraw_exclusive.cpp  client_ddraw_exclusive.h  client_gdi.cpp  client_gdi.h  client_wince.cpp  client_wince.h  compat.c  compat.h  main.cpp  mutex_wince.cpp  mutex_wince.h  stdint.h  thread_wince.cpp  thread_wince.h  version.bat  wince.sln  wince.vcproj
dwa140/: System.mky  default.mky  dw140.reg
dwa140/reg_convert/: CMakeLists.txt  main.cpp
inih/cpp/: INIReader.cpp  INIReader.h
libvncserver/common/: vncauth.c
libvncserver/libvncclient/: rfbproto.c  sockets.c  tls_none.c  vncviewer.c  zrle.c
libvncserver/rfb/: rfbclient.h  rfbproto.h
platform/linux/: client_gtk.cpp  client_gtk.h  compat.c  mutex_linux.cpp  thread_linux.cpp  thread_linux.h
platform/linux/vncviewer/: .cproject  .project  config_storage.cpp  config_storage.h  vncviewer.cpp
platform/wince/: client_wince.cpp  client_wince.h  compat.c  compat.h  getopt.cpp  mutex_wince.cpp  thread_wince.cpp  thread_wince.h
platform/wince/inc/: compat.h
platform/wince/rfb/: rfbconfig.h
platform/wince/vncviewer/: .gitignore  Resourceppc.h  compat.c  getopt.h  vncviewer.cpp  vncviewer.h  vncviewer.sln  vncviewer.vcproj  vncviewerDlg.cpp  vncviewerDlg.h  vncviewerppc.aps  vncviewerppc.rc
rfb/: rfbconfig.h
rndis/: dnsmasq  start.sh  stop.sh  telnetd.reg  usb8023.reg  usb_tether_start.sh  usb_tether_stop.sh
server/: .cproject  .gitignore  .project  AndroidManifest.xml
server/jni/: Android.mk  Application.mk
server/jni/brightness/: Android.mk  brightness.h  main.cpp
server/jni/libvncnative/: Android.mk  AndroidGraphicBuffer.cpp  AndroidGraphicBuffer.h  brightnesshelper.cpp  buffermanager.cpp  buffermanager.h  eventinjector.cpp  eventinjector.h  triplebuffer.h  vncjni.cpp  vncserver.cpp  vncserver.h
server/jni/libvncserver/: Android.mk  AndroidGraphicBuffer.cpp  AndroidGraphicBuffer.h  brightness.cpp  brightnesshelper.cpp  brightnesshelper.h  eventinjector.cpp  eventinjector.h  rfbinput.cxx  suinput.c  suinput.h  triplebuffer.h  vncjni.cpp  vncserver.cpp  vncserver.h
server/jni/vnchelper/: Android.mk  brightness.cpp  log.h  main.cpp  server_unix.cpp  server_unix.h  vnchelper.cpp  vnchelper.h  vnchelper_client.cpp  vnchelper_client.h
server/res/layout/: activity_main.xml  activity_vnc_projection.xml
(+37 files in other folders)
